tests/baselines/reference/classOverloadForFunction2.errors.txt
tests/cases/compiler/classOverloadForFunction2.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/compiler/classOverloadForFunction2.ts(1,10): error TS2814: Function with bodies can only merge with classes that are ambient.
tests/cases/compiler/classOverloadForFunction2.ts(2,7): error TS2813: Class declaration cannot implement overload list for 'bar'.


==== tests/cases/compiler/classOverloadForFunction2.ts (3 errors) ====
    function bar(): string;
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
             ~~~
!!! error TS2814: Function with bodies can only merge with classes that are ambient.
!!! related TS6506 tests/cases/compiler/classOverloadForFunction2.ts:2:7: Consider adding a 'declare' modifier to this class.
    class bar {}
          ~~~
!!! error TS2813: Class declaration cannot implement overload list for 'bar'.
!!! related TS6506 tests/cases/compiler/classOverloadForFunction2.ts:2:7: Consider adding a 'declare' modifier to this class.